<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:chenyu="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_root"
    chenyu:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/act_personal_center_setting"
    tools:context="com.chenyu.yiyuangou.controller.activity.PersonalCenterSettingAct">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.chenyu.yiyuangou.widget.SettingView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/act_personal_center_setting_margin_top"
                chenyu:text="@string/act_personal_center_setting_personal"
                chenyu:show_view_top_full="true"
                chenyu:show_view_bottom_full="true"
                chenyu:image_src="@drawable/next"/>

            <com.chenyu.yiyuangou.widget.SettingView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/act_personal_center_setting_margin_top"
                chenyu:text="@string/act_personal_center_safe_setting"
                chenyu:image_src="@drawable/next"
                chenyu:show_view_bottom_full="true"
                chenyu:show_view_top_full="true"/>

            <com.chenyu.yiyuangou.widget.SettingView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/act_personal_center_setting_margin_top"
                chenyu:text="@string/act_personal_center_help_center"
                chenyu:image_src="@drawable/next"
                chenyu:show_view_top_full="true"
                chenyu:show_view_bottom_full="true"/>

            <com.chenyu.yiyuangou.widget.SettingView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                chenyu:text="@string/act_personal_center_message_return"
                chenyu:image_src="@drawable/next"
                chenyu:show_view_bottom_full="true"/>

            <com.chenyu.yiyuangou.widget.SettingView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                chenyu:text="@string/act_personal_center_help_phone"
                chenyu:image_src="@drawable/next"
                chenyu:sub_text="15521233992"
                chenyu:show_view_bottom_full="true"/>

            <com.chenyu.yiyuangou.widget.SettingView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/act_personal_center_setting_margin_top"
                chenyu:text="@string/act_personal_center_message_access"
                chenyu:show_view_bottom_full="true"
                chenyu:show_view_top_full="true"
                chenyu:image_src="@drawable/next"/>

            <com.chenyu.yiyuangou.widget.SettingView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                chenyu:text="@string/act_personal_center_clear_cache"
                chenyu:sub_text="3.11M"
                chenyu:image_src="@drawable/next"
                chenyu:show_view_bottom_full="true"/>

            <com.chenyu.yiyuangou.widget.SettingView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                chenyu:text="@string/act_personal_center_version_update"
                chenyu:sub_text="当前版本：V1.0"
                chenyu:show_view_bottom_full="true"/>

            <com.chenyu.yiyuangou.widget.SettingView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/act_personal_center_setting_margin_top"
                chenyu:text="@string/act_personal_center_about_us"
                chenyu:show_view_top_full="true"
                chenyu:show_view_bottom_full="true"
                chenyu:image_src="@drawable/next"/>

            <com.chenyu.yiyuangou.widget.SettingView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                chenyu:text="@string/act_personal_center_service_protocol"
                chenyu:image_src="@drawable/next"
                chenyu:show_view_bottom_full="true"/>

            <LinearLayout
                android:id="@+id/act_personal_center_setting_ll_signout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_layout"
                android:paddingLeft="@dimen/act_personal_center_setting_ll_signout_padding_left_right"
                android:paddingRight="@dimen/act_personal_center_setting_ll_signout_padding_left_right"
                android:paddingTop="@dimen/act_personal_center_setting_ll_signout_padding_top_bottom"
                android:paddingBottom="@dimen/act_personal_center_setting_ll_signout_padding_top_bottom"
                android:layout_marginTop="@dimen/act_personal_center_setting_margin_top">
                <Button
                    android:id="@+id/act_personal_center_setting_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/act_personal_center_btn_signout"
                    android:textSize="@dimen/text_mid"
                    android:textColor="@color/common_white"
                    android:background="@drawable/btn_style_2"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
