<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_root"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/act_signin_identify_check"
    tools:context="com.chenyu.yiyuangou.controller.activity.SigninIdentifyCheckAct">

    <TextView
        android:id="@+id/act_signin_identify_check_tv_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/act_signin_identify_check_tv_tip"
        android:textSize="@dimen/text_small"
        android:textColor="@color/gray_text"
        android:layout_marginLeft="@dimen/act_signin_identify_check_tv_tip_margin_left_right"
        android:layout_marginRight="@dimen/act_signin_identify_check_tv_tip_margin_left_right"
        android:layout_marginTop="@dimen/act_signin_identify_check_tv_tip_margin_top_bottom"
        android:layout_marginBottom="@dimen/act_signin_identify_check_tv_tip_margin_top_bottom"/>
    <EditText
        android:id="@+id/act_signin_identify_check_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_signin_identify_check_tv_tip"
        android:layout_marginLeft="@dimen/act_signin_identify_check_edit_margin_left_right"
        android:layout_marginRight="@dimen/act_signin_identify_check_edit_margin_left_right"
        android:layout_marginBottom="@dimen/act_signin_identify_check_edit_margin_bottom"
        android:padding="@dimen/act_signin_identify_chech_edit_padding"
        android:hint="@string/act_signin_identify_check_edit_hint"
        android:textSize="@dimen/text_small"
        android:textColor="@color/black_text"
        android:textColorHint="@color/gray_text"
        android:background="@drawable/input_forgive_psw"/>

    <Button
        android:id="@+id/act_signin_identify_btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_signin_identify_check_edit"
        android:layout_marginLeft="@dimen/act_signin_identify_btn_next_margin_left_right"
        android:layout_marginRight="@dimen/act_signin_identify_btn_next_margin_left_right"
        android:layout_marginBottom="@dimen/act_signin_identify_btn_next_margin_bottom"
        android:background="@drawable/btn_style_2"
        android:text="@string/act_signin_identify_btn_next"
        android:textSize="@dimen/text_mid"
        android:textColor="@color/common_white"/>
    <TextView
        android:id="@+id/act_signin_identify_check_tv_tip_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_signin_identify_btn_next"
        android:layout_marginLeft="@dimen/act_signin_identify_check_tv_tip_2_margin_left"
        android:layout_marginRight="@dimen/act_signin_identify_check_tv_tip_2_margin_right"
        android:layout_marginBottom="@dimen/act_signin_identify_check_tv_tip_2_margin_bottom"
        android:text="@string/act_signin_identify_check_tv_tip_2"
        android:textSize="@dimen/text_small"
        android:textColor="@color/gray_text"/>
    <TextView
        android:id="@+id/act_signin_identify_check_tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/act_signin_identify_check_tv_tip_2"
        android:layout_below="@id/act_signin_identify_btn_next"
        android:text="100"
        android:textSize="@dimen/text_small"
        android:textColor="@color/common_orange"/>

    <TextView
        android:id="@+id/act_signin_identify_check_tv_tip3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/act_signin_identify_check_tv_tip_3_margin_left"
        android:text="@string/act_signin_identify_check_tv_tip_3"
        android:textSize="@dimen/text_small"
        android:textColor="@color/gray_text"
        android:layout_toRightOf="@id/act_signin_identify_check_tv_count"
        android:layout_below="@id/act_signin_identify_btn_next"/>
    <Button
        android:id="@+id/act_signin_identify_check_btn_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/act_signin_identify_check_btn_return"
        android:textSize="@dimen/text_mid"
        android:textColor="@color/signature_text"
        android:layout_below="@id/act_signin_identify_check_tv_tip_2"
        android:layout_marginLeft="@dimen/act_signin_identify_check_btn_return_margin_left_right"
        android:layout_marginRight="@dimen/act_signin_identify_check_btn_return_margin_left_right"
        android:background="@drawable/btn_style_1"/>
</RelativeLayout>
