<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/act_setting_psw"
    tools:context="com.chenyu.yiyuangou.controller.activity.SettingPswAct">

    <EditText
        android:id="@+id/act_setting_psw_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_forgive_psw"
        android:layout_marginLeft="@dimen/act_setting_psw_edit_margin_left_right"
        android:layout_marginRight="@dimen/act_setting_psw_edit_margin_left_right"
        android:layout_marginTop="@dimen/act_setting_psw_edit_margin_top_bottom"
        android:layout_marginBottom="@dimen/act_setting_psw_edit_margin_top_bottom"
        android:padding="@dimen/act_setting_psw_edit_padding"
        android:textColor="@color/black_text"
        android:textColorHint="@color/gray_text"
        android:textSize="@dimen/text_small"
        android:hint="@string/act_setting_psw_tv_hint"/>

    <RelativeLayout
        android:id="@+id/act_setting_psw_rl_is_visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_setting_psw_edit">
        <CheckBox
            android:id="@+id/act_setting_psw_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/act_setting_psw_cb_margin_left"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/act_setting_psw_cb"
            android:text="@string/act_setting_psw_tv_is_visiable"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/act_setting_psw_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style_2"
        android:text="@string/act_setting_psw_btn_sure_setting"
        android:textSize="@dimen/text_mid"
        android:textColor="@color/common_white"
        android:layout_below="@id/act_setting_psw_rl_is_visible"
        android:layout_marginLeft="@dimen/act_setting_psw_btn_margin_left_right"
        android:layout_marginRight="@dimen/act_setting_psw_btn_margin_left_right"
        android:layout_marginTop="@dimen/act_setting_psw_btn_margin_top_bottom"
        android:layout_marginBottom="@dimen/act_setting_psw_btn_margin_top_bottom"/>

    <TextView
        android:id="@+id/act_setting_psw_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/act_setting_psw_tv_margin_left_right"
        android:layout_marginRight="@dimen/act_setting_psw_tv_margin_left_right"
        android:text="@string/act_setting_psw_tv_tip"
        android:textSize="@dimen/text_small"
        android:textColor="@color/gray_text"
        android:layout_below="@id/act_setting_psw_btn"/>

</RelativeLayout>
