<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_root"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/act_signin"
    tools:context="com.chenyu.yiyuangou.controller.activity.SigninAct">

    <EditText
        android:id="@+id/act_signin_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:textSize="@dimen/text_small"
        android:textColor="@color/black_text"
        android:textColorHint="@color/gray_text"
        android:hint="@string/act_sigin_edit_hint"
        android:background="@drawable/input_forgive_psw"/>
    <Button
        android:id="@+id/act_signin_btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="16dp"
        android:text="@string/act_signin_btn_text"
        android:textSize="@dimen/text_mid"
        android:textColor="@color/common_white"
        android:background="@drawable/btn_style_2"
        android:layout_below="@id/act_signin_edit"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/act_signin_btn_next">
        <CheckBox
            android:id="@+id/act_signin_cb"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginLeft="18dp"
            android:checked="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/act_signin_tv_adgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/act_signin_tv_tip"
            android:textSize="@dimen/text_little"
            android:textColor="@color/gray_text"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/act_signin_cb"/>
    </RelativeLayout>
</RelativeLayout>
